--- a/introducao-javascript-inicial/introducao-javascript/index.html
+++ b/introducao-javascript-inicial/introducao-javascript/index.html
@@ -20,6 +20,9 @@
 	<main>
 		<section class="container">
 			<h2>Meus pacientes</h2>
+			<span id="erro"></span>
+			<label for="filtro">Pesquise</label>
+			<input type="text" name="filtro" id="filtro" placeholder="Informe o nome de pesquisa">
 			<table>
 				<thead>
 					<tr>
@@ -71,12 +74,14 @@
 					</tr>
 				</tbody>
 			</table>
+			
+			<button id="buscar-paciente" class="botao bto-principal">Buscar Pacientes</button>
 
 		</section>
 		<section class="container">
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
-			<form>
-				<div class="grupo">
+			<form id="form-adiciona">
+				<div class="grupo" id="fofis">
 					<label for="nome">Nome:</label>
 					<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
 				</div>
@@ -97,6 +102,7 @@
 				</div>
 
 				<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+				
 			</form>
 		</section>
 	</main>
@@ -105,7 +111,7 @@
 
 </html>
 
-<script src="./js/index.js">
-
-
-</script>
+<script src="./js/index.js"></script>
+<script src="./js/remover-paciente.js"></script>
+<script src="./js/filtra.js"></script>
+<script src="./js/buscar-pacientes.js"></script>
